# SBER_TEST

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  update_coverage_readme.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  fields.py  response.py  routes.py  swagger.yml  utils.py  validation.py
tests/: README.md  coverage.md  test_app.py  test_app_similarly.py  update_coverage.py  update_coverage_readme.py
